--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ hs_err_pid*
 # Ignore Gradle build output directory
 build/
 
+# Gradle wrapper
+!gradle/wrapper/gradle-wrapper.jar
+
 # VSCode
 .vscode/
 .settings/
