--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
   id 'java-library'
 
   id 'com.github.joselion.pretty-jupiter' version '1.2.0'
+  id 'org.sonarqube' version '2.8'
 }
 
 dependencyLocking {
@@ -37,5 +38,15 @@ jacocoTestReport {
   reports {
     xml.enabled(true)
     html.enabled(true)
+  }
+}
+
+sonarqube {
+  properties {
+    property 'sonar.projectKey', 'JoseLion_brewery'
+    property 'sonar.organization', 'joselion'
+    property 'sonar.host.url', 'https://sonarcloud.io'
+    property 'sonar.junit.reportPaths', "${buildDir}/test-results/junit"
+    property 'sonar.coverage.jacoco.xmlReportPaths', "${jacoco.reportsDir}/test/jacocoTestReport.xml"
   }
 }
