--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,10 @@ buildscript {
 }
 
 plugins {
+  id 'jacoco'
   id 'java-library'
+
+  id 'com.github.joselion.pretty-jupiter' version '1.2.0'
 }
 
 dependencyLocking {
@@ -27,5 +30,12 @@ test {
 
   reports {
     junitXml.destination = file("${buildDir}/test-results/junit")
+  }
+}
+
+jacocoTestReport {
+  reports {
+    xml.enabled(true)
+    html.enabled(true)
   }
 }
